@@ -4135,13 +4135,12 @@ public class FSNamesystem implements Namesystem, FSNamesystemMBean,
         // file (See HDFS-6825).
         //
         
-        BlockCollection blockCollection = storedBlock.getBlockCollection();
-        if (blockCollection == null) {
+        if (storedBlock.isDeleted()) {
           throw new IOException("The blockCollection of " + storedBlock
               + " is null, likely because the file owning this block was"
               + " deleted and the block removal is delayed");
         }
-        INodeFile iFile = ((INode)blockCollection).asFile();
+        INodeFile iFile = ((INode)storedBlock.getBlockCollection()).asFile();
         if (inodeIdentifier==null) {
           throw new FileNotFoundException("File not found: "
               + iFile.getFullPathName() + ", likely due to delayed block"
